Various unrelated changes because I'm not awesome enough to do separate commits today :'( Also updated the Ruby Experimental language.

--- a/README.textile
+++ b/README.textile
@@ -11,3 +11,7 @@ h2. Live Preview of HTML, CSS & Source Code
 Then it'll automatically refresh as you edit your code. It does a clickable diff of your unsaved changes in source files. It sets the @<base>@ tag of any html file to your @$TM_PROJECT_SITEURL@. And it previews your CSS by injecting it into a @<style>@ tag inside the html of whatever url is in the file @/tmp/42_tm_css_live_preview_url.stupid_way_to_save_info@. It might do some other stuff too, but I completely forget now.
 
 Oh yeah, it also does a live render of your Textile or Markdown documents and runs your javascript code. It's all based on the current language selected for your file.
+
+h2. Ruby Experimental
+
+A modified version of the Ruby.tmlanguage that has much better support for methods, variables and such.
