--- a/README.textile
+++ b/README.textile
@@ -15,3 +15,8 @@ Oh yeah, it also does a live render of your Textile or Markdown documents and ru
 h2. Ruby Experimental
 
 A modified version of the Ruby.tmlanguage that has much better support for methods, variables and such.
+
+
+h3. Menu structure as of Aug 6 2008
+
+<a href="http://www.flickr.com/photos/thomas_aylott/2738203009/" title="TextMate subtleGradient.tmBundle by Thomas Aylott, on Flickr"><img src="http://farm4.static.flickr.com/3264/2738203009_6ee8b77c7d_b.jpg" width="514" height="1024" alt="TextMate subtleGradient.tmBundle" /></a>
